# questionare

./: .gitignore  3.大纲制定和撰写要求.docx  LICENSE  README.md  SEM改进.txt  main.py  package-lock.json  package.json  pyproject.toml  六七大纲.md  六七章.docx  大纲.docx
data/: README.md  叶开泰问卷数据.xlsx  问卷数据_cleaned_for_SEM.xlsx
doc/: 六七章_更新审计.json  六七章_更新明细.csv  六七章报告.docx
docs/: cleanup_manifest_2026-02-22.md  scripts-core.md  ~$需要填的部分.docx  ~WRL0003.tmp  三.docx  待填数据.docx  待填数据_已回填.docx  需要填的部分.docx
output_current/: pipeline_manifest.json  run_metadata.json  问卷数据处理与分析_结果摘要.txt
output_data_analysis/: conversion_audit.json  js_report_metrics.json  pipeline_manifest.json  国奖补强_口径声明.txt  问卷数据处理与分析_执行大纲.txt  问卷数据处理与分析_结果摘要.txt
samples/: README.md
scripts/: award_booster_core.py  build_outline_data_pack.py  build_report_metrics.py  build_table17_payment_independence.py  check_pending_doc_consistency_v2.py  convert_961_to_108.py  draw_ch6_3_required_figures.py  draw_clustering_elbow_figure.py  draw_clustering_quality_figure.py  draw_clustering_required_figures.py  draw_cultural_learning_mca.py  draw_docx_cluster_figures.py  draw_ipa_mean_userdata.py  draw_ipa_median_userdata.py  draw_ipa_required_figures.py  draw_ipa_scatter_current.py  draw_mca_figure_6_1.py  draw_payment_willingness_mca_figure_48.py  draw_sem_required_figures.py  fill_pending_doc_v2.py  generate_award_boosters.py  generate_award_boosters_v2.py  generate_ch6_ch7_report.py  generate_current_status_outputs.py  qp_io.py  qp_stats.py  questionnaire_analysis_core.py  redraw_status_fig4_options.py  redraw_status_fig5_options.py  report_data_extractors.py  run_clustering.py  (+20 more)
(+380 files in other folders)
