[project]
name = "questionare-processiong"
version = "0.1.0"
description = "问卷数据分析、建模与 SEM 管线"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "scipy>=1.17.0",
    "semopy>=2.3,<3",
    "xgboost>=3.2.0",
]
