[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "questionnaire-analysis"
version = "0.2.0"
description = "Questionnaire data analysis, modeling, clustering, and SEM pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.17.0",
    "semopy>=2.3,<3",
    "statsmodels>=0.14.0",
    "xgboost>=3.2.0",
]

[project.scripts]
questionnaire-analysis = "questionnaire_analysis.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
